@@ -6,6 +6,10 @@ Changes since 2.4.20:
 Lib/
 * LDAPObject.read_s() now returns None instead of raising 
   ldap.NO_SUCH_OBJECT in case the search operation returned emtpy result.
+* ldap.resiter.ResultProcessor.allresults() now takes new key-word
+  argument add_ctrls which is internally passed to LDAPObject.result4()
+  and lets the method also return response control along with the search 
+  results.
 
 Tests/
 * Unit tests for module ldif (thanks to Petr Viktorin)
@@ -1190,4 +1194,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.353 2015/09/18 14:51:44 stroeder Exp $
+$Id: CHANGES,v 1.354 2015/09/18 20:20:32 stroeder Exp $
